--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "bc-nc-games",
   "main": "index.js",
   "scripts": {
+    "start": "node server-items/listen.js",
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
+    "seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed",
     "test": "jest"
   },
   "repository": {
@@ -22,8 +24,10 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jest-sorted": "^1.0.12",
     "pg": "^8.7.1",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "save-dev": "0.0.1-security"
   },
   "devDependencies": {
     "jest": "^27.3.1",
