--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
   "devDependencies": {
     "jest": "^27.3.1",
     "supertest": "^6.1.6"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "jest-sorted"
+    ]
   }
 }
